force-app/main/default/objects/details__c/fields/Age_Detail__c.field-meta.xml
<CustomField>
    <fullName>Age_Detail__c</fullName>
    <label>Age_Detail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>