force-app/main/default/objects/details__c/fields/AnnualIncome_Detail__c.field-meta.xml
<CustomField>
    <fullName>AnnualIncome_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AnnualIncome_Detail</label>
    <type>Checkbox</type>
</CustomField>