force-app/main/default/objects/details__c/fields/City_Detail__c.field-meta.xml
<CustomField>
    <fullName>City_Detail__c</fullName>
    <label>City_Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Mohali</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>