force-app/main/default/objects/details__c/fields/Gender_Detail__c.field-meta.xml
<CustomField>
    <fullName>Gender_Detail__c</fullName>
    <label>Gender_Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Gay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>